# foundry-stablecoin

./: Cargo.toml  README.md
packets/: query_packet.txt  response_packet.txt
src/: error.rs  main.rs  prelude.rs
