[package]
name = "dnsfun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
clap =  { version = "4", features = ["cargo"]}

[dev-dependencies]
anyhow = "1"